--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ MIGRATION_DB_PORT=5432
 MIGRATION_DB_NAME=noteful
 MIGRATION_DB_USER=postgres
 MIGRATION_DB_PASS=
-DATABASE_URL="postgresql://postgres@localhost/noteful"
+DATABASE_URL= postgresql://postgres@localhost/noteful
 JWT_SECRET="myclientele-jwt-secret"
