--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "uuid": "^8.1.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.8"
   }
 }
