--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
     "uuid": "^8.1.0",
