--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "heroku run npm run migrate",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "postdeploy": "npm run migrate:production"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +20,6 @@
     "chai": "^4.2.0",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
-    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
+    "postgrator-cli": "^3.2.0",
     "uuid": "^8.1.0",
     "winston": "^3.2.1",
     "xss": "^1.0.8"
